--- a/services/video-service/k8s/base/configmap.yaml
+++ b/services/video-service/k8s/base/configmap.yaml
@@ -10,6 +10,6 @@ data:
   REDIS_HOST: "redis"
   REDIS_PORT: "6379"
   AUTH_SERVICE_URL: "http://auth-service:8080"
-  USER_SERVICE_URL: "http://user-service:8081/api/users"
+  USER_SERVICE_URL: "http://user-service:8081"
   LIVEKIT_HOST: "http://livekit:7880"
   LIVEKIT_WS_URL: "ws://livekit:7880"
