--- a/infrastructure/base/livekit/configmap.yaml
+++ b/infrastructure/base/livekit/configmap.yaml
@@ -9,7 +9,8 @@ data:
       port_range_start: 50000
       port_range_end: 60000
       tcp_port: 7881
-      use_external_ip: true
+      use_external_ip: false
+      node_ip: "127.0.0.1"
 
     keys:
       devkey: secret
