--- a/services/user-service/docker/Dockerfile
+++ b/services/user-service/docker/Dockerfile
@@ -18,10 +18,18 @@ COPY services/user-service/go.mod services/user-service/go.sum ./
 # Add replace directive for local package
 RUN echo 'replace github.com/OrangesCloud/wealist-advanced-go-pkg => ../../packages/wealist-advanced-go-pkg' >> go.mod
 
+# Debug: Check if go.mod was updated and local package exists
+RUN echo "=== DEBUG: go.mod content ===" && \
+    cat go.mod | tail -5 && \
+    echo "=== DEBUG: Local package exists? ===" && \
+    ls -la ../../packages/wealist-advanced-go-pkg/health/
+
 # Tidy and download dependencies with cache mount (use GOWORK=off to ignore go.work)
 RUN --mount=type=cache,target=/go/pkg/mod \
     GOWORK=off go mod tidy && \
-    GOWORK=off go mod download
+    GOWORK=off go mod download && \
+    echo "=== DEBUG: Module list ===" && \
+    GOWORK=off go list -m all | grep wealist
 
 # Copy service source code
 COPY services/user-service/ ./
