--- a/helm/charts/auth-service/values-develop-registry-local.yaml
+++ b/helm/charts/auth-service/values-develop-registry-local.yaml
@@ -1,5 +1,5 @@
 # =============================================================================
-# user-service - Development Environment (Local Registry + local.wealist.co.kr)
+# auth-service - Development Environment (Local Registry + local.wealist.co.kr)
 # =============================================================================
 # Overrides for local Kind cluster with localhost:5001 registry
 
@@ -29,34 +29,36 @@ replicaCount: 1  # Single replica for development
 config:
   ENV: "dev"
   LOG_LEVEL: "debug"
+  SPRING_PROFILES_ACTIVE: "dev"
 
-  # Server base path for ingress routing
-  SERVER_BASE_PATH: "/api"
+  # OAuth2 URLs for local development
+  OAUTH2_REDIRECT_URL_ENV: "http://local.wealist.co.kr/oauth/callback"
+  OAUTH2_CLIENT_REDIRECT_URI: "http://local.wealist.co.kr/login/oauth2/code/google"
 
-  # S3 public endpoint for local domain
-  S3_PUBLIC_ENDPOINT: "https://local.wealist.co.kr/minio"
+  # CORS for local development
+  CORS_ALLOWED_ORIGINS: "http://local.wealist.co.kr,http://localhost:3000"
 
 # -----------------------------------------------------------------------------
-# Health Check Overrides (with SERVER_BASE_PATH)
+# Health Check Overrides (faster startup in dev)
 # -----------------------------------------------------------------------------
 healthCheck:
   liveness:
-    path: /api/health/live
-    initialDelaySeconds: 15  # Faster startup in dev
+    path: /actuator/health/liveness
+    initialDelaySeconds: 20  # Faster startup in dev
   readiness:
-    path: /api/health/ready
-    initialDelaySeconds: 5
+    path: /actuator/health/readiness
+    initialDelaySeconds: 10
 
 # -----------------------------------------------------------------------------
 # Resource Overrides (Lower limits for development)
 # -----------------------------------------------------------------------------
 resources:
   requests:
-    memory: "128Mi"
-    cpu: "50m"
-  limits:
     memory: "256Mi"
-    cpu: "200m"
+    cpu: "100m"
+  limits:
+    memory: "512Mi"
+    cpu: "500m"
 
 # -----------------------------------------------------------------------------
 # Autoscaling Disabled (Not needed in development)
@@ -69,7 +71,6 @@ autoscaling:
 # -----------------------------------------------------------------------------
 podSecurityContext:
   runAsNonRoot: false  # Allow root in dev for debugging
-  # fsGroup: 1000
 
 securityContext:
   allowPrivilegeEscalation: false
