--- a/helm/charts/user-service/values.yaml
+++ b/helm/charts/user-service/values.yaml
@@ -1,32 +1,60 @@
-# Default values for user-service
+# =============================================================================
+# user-service Helm Chart - Default Values
+# =============================================================================
+# Production-ready configuration with security, autoscaling, and monitoring
 
+# -----------------------------------------------------------------------------
+# Global Configuration (inherited from parent chart or set at install time)
+# -----------------------------------------------------------------------------
 global:
-  namespace: wealist-dev
+  namespace: wealist-prod
   environment: production
-  imageRegistry: ""
+  imageRegistry: ""  # Set to your container registry (e.g., ghcr.io/your-org)
+  domain: wealist.co.kr
 
-# Image configuration
+# -----------------------------------------------------------------------------
+# Image Configuration
+# -----------------------------------------------------------------------------
 image:
   repository: user-service
-  tag: latest
-  pullPolicy: Always
+  tag: ""  # Defaults to Chart.appVersion if not set
+  pullPolicy: IfNotPresent
 
-# Deployment configuration
-replicaCount: 1
+imagePullSecrets: []
+# - name: registry-secret
 
-# Service configuration
+# -----------------------------------------------------------------------------
+# Deployment Configuration
+# -----------------------------------------------------------------------------
+replicaCount: 2  # Production default (high availability)
+
+# Deployment strategy
+strategy:
+  type: RollingUpdate
+  rollingUpdate:
+    maxSurge: 1
+    maxUnavailable: 0
+
+# -----------------------------------------------------------------------------
+# Service Configuration
+# -----------------------------------------------------------------------------
 service:
   type: ClusterIP
   port: 8081
   targetPort: 8081
   annotations: {}
+  # cloud.google.com/load-balancer-type: "Internal"
 
-# Application configuration
+# -----------------------------------------------------------------------------
+# Application Configuration
+# -----------------------------------------------------------------------------
 config:
+  # Server
   PORT: "8081"
   SERVER_PORT: "8081"
   ENV: "production"
   LOG_LEVEL: "info"
+  SERVER_BASE_PATH: ""  # Set in environment-specific values if needed
 
   # Database
   DB_HOST: "postgres"
@@ -44,27 +72,55 @@ config:
   S3_BUCKET: "wealist-files"
   S3_REGION: "ap-northeast-2"
   S3_ENDPOINT: "http://minio:9000"
-  S3_PUBLIC_ENDPOINT: "http://wealist.local/minio"
+  S3_PUBLIC_ENDPOINT: "https://wealist.co.kr/minio"
 
-  # Server base path (for ingress routing)
-  SERVER_BASE_PATH: ""
+# -----------------------------------------------------------------------------
+# Secrets (DO NOT COMMIT ACTUAL VALUES)
+# For production, use External Secrets Operator or similar
+# -----------------------------------------------------------------------------
+secrets: {}
+  # DATABASE_URL: ""  # Will be base64 encoded automatically
+  # SECRET_KEY: ""
 
-# Health check configuration
+# External Secrets Operator integration (optional)
+externalSecrets:
+  enabled: false
+  secretStore: aws-secrets-manager  # or vault, gcpsm, etc.
+  secretStoreKind: ClusterSecretStore
+  refreshInterval: 1h
+  data: []
+  # - secretKey: DATABASE_URL
+  #   remoteKey: /prod/user-service/database-url
+  # - secretKey: SECRET_KEY
+  #   remoteKey: /prod/user-service/secret-key
+
+# -----------------------------------------------------------------------------
+# Health Checks
+# -----------------------------------------------------------------------------
 healthCheck:
   liveness:
     enabled: true
-    path: /api/health
+    path: /health/live
     port: 8081
     initialDelaySeconds: 30
     periodSeconds: 10
+    timeoutSeconds: 5
+    successThreshold: 1
+    failureThreshold: 3
+
   readiness:
     enabled: true
-    path: /api/ready
+    path: /health/ready
     port: 8081
-    initialDelaySeconds: 5
+    initialDelaySeconds: 10
     periodSeconds: 5
+    timeoutSeconds: 3
+    successThreshold: 1
+    failureThreshold: 3
 
-# Resource limits
+# -----------------------------------------------------------------------------
+# Resource Limits (Production-grade)
+# -----------------------------------------------------------------------------
 resources:
   requests:
     memory: "256Mi"
@@ -73,7 +129,113 @@ resources:
     memory: "512Mi"
     cpu: "500m"
 
-# Environment variable sources
+# -----------------------------------------------------------------------------
+# Autoscaling (HPA)
+# -----------------------------------------------------------------------------
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 10
+  targetCPUUtilizationPercentage: 70
+  targetMemoryUtilizationPercentage: 80
+  behavior:
+    scaleDown:
+      stabilizationWindowSeconds: 300
+      policies:
+        - type: Percent
+          value: 50
+          periodSeconds: 60
+    scaleUp:
+      stabilizationWindowSeconds: 0
+      policies:
+        - type: Percent
+          value: 100
+          periodSeconds: 15
+        - type: Pods
+          value: 2
+          periodSeconds: 15
+      selectPolicy: Max
+
+# -----------------------------------------------------------------------------
+# Security Configuration
+# -----------------------------------------------------------------------------
+# Pod Security Context
+podSecurityContext:
+  runAsNonRoot: true
+  runAsUser: 1000
+  fsGroup: 1000
+  seccompProfile:
+    type: RuntimeDefault
+
+# Container Security Context
+securityContext:
+  allowPrivilegeEscalation: false
+  capabilities:
+    drop:
+      - ALL
+  readOnlyRootFilesystem: false  # Set true if app doesn't need write access
+  runAsNonRoot: true
+  runAsUser: 1000
+
+# Service Account
+serviceAccount:
+  create: true
+  annotations: {}
+  # iam.gke.io/gcp-service-account: user-service@project-id.iam.gserviceaccount.com
+  name: ""  # Defaults to chart fullname
+
+# Network Policy (optional, enable for enhanced security)
+networkPolicy:
+  enabled: false
+  ingress:
+    - from:
+        - namespaceSelector:
+            matchLabels:
+              name: wealist-dev
+        - podSelector:
+            matchLabels:
+              app.kubernetes.io/part-of: wealist
+      ports:
+        - protocol: TCP
+          port: 8081
+  egress:
+    - to:
+        - podSelector:
+            matchLabels:
+              app: postgres
+      ports:
+        - protocol: TCP
+          port: 5432
+    - to:
+        - podSelector:
+            matchLabels:
+              app: redis
+      ports:
+        - protocol: TCP
+          port: 6379
+    # Allow DNS
+    - to:
+        - namespaceSelector: {}
+      ports:
+        - protocol: UDP
+          port: 53
+
+# -----------------------------------------------------------------------------
+# Monitoring & Observability
+# -----------------------------------------------------------------------------
+metrics:
+  enabled: true
+  path: /metrics
+  # Prometheus annotations are auto-added when enabled
+
+# Pod annotations (merged with auto-generated annotations)
+podAnnotations: {}
+  # Custom annotations here
+
+# -----------------------------------------------------------------------------
+# Environment Variables
+# -----------------------------------------------------------------------------
+# Environment variable sources (ConfigMaps and Secrets)
 envFrom:
   - configMapRef:
       name: wealist-shared-config
@@ -86,18 +248,58 @@ envFrom:
 env:
   - name: DATABASE_URL
     value: "postgresql://user_service:user_service_password@postgres:5432/wealist_user_db?sslmode=disable"
+  # Add more env vars as needed
 
-# Pod annotations
-podAnnotations:
-  prometheus.io/scrape: "true"
-  prometheus.io/port: "8081"
-  prometheus.io/path: "/metrics"
+# -----------------------------------------------------------------------------
+# Pod Disruption Budget (for high availability)
+# -----------------------------------------------------------------------------
+podDisruptionBudget:
+  enabled: true
+  minAvailable: 1
+  # maxUnavailable: 1
 
+# -----------------------------------------------------------------------------
+# Advanced Configuration
+# -----------------------------------------------------------------------------
 # Node selector
 nodeSelector: {}
+  # kubernetes.io/arch: amd64
+  # workload-type: services
 
 # Tolerations
 tolerations: []
+  # - key: "dedicated"
+  #   operator: "Equal"
+  #   value: "services"
+  #   effect: "NoSchedule"
 
 # Affinity
 affinity: {}
+  # podAntiAffinity:
+  #   preferredDuringSchedulingIgnoredDuringExecution:
+  #     - weight: 100
+  #       podAffinityTerm:
+  #         labelSelector:
+  #           matchExpressions:
+  #             - key: app.kubernetes.io/name
+  #               operator: In
+  #               values:
+  #                 - user-service
+  #         topologyKey: kubernetes.io/hostname
+
+# Volume mounts (if needed)
+volumeMounts: []
+  # - name: tmp
+  #   mountPath: /tmp
+
+# Volumes (if needed)
+volumes: []
+  # - name: tmp
+  #   emptyDir: {}
+
+# -----------------------------------------------------------------------------
+# Testing & Development
+# -----------------------------------------------------------------------------
+# These are overridden in values-develop-registry-local.yaml
+test:
+  enabled: false
