--- a/services/auth-service/k8s/base/deployment.yaml
+++ b/services/auth-service/k8s/base/deployment.yaml
@@ -37,13 +37,13 @@ spec:
               value: "http://user-service:8081"
           livenessProbe:
             httpGet:
-              path: /health
+              path: /actuator/health/liveness
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 10
           readinessProbe:
             httpGet:
-              path: /ready
+              path: /actuator/health/readiness
               port: 8080
             initialDelaySeconds: 5
             periodSeconds: 5
