--- a/services/user-service/k8s/base/deployment.yaml
+++ b/services/user-service/k8s/base/deployment.yaml
@@ -31,13 +31,13 @@ spec:
               value: "postgresql://user_service:user_service_password@postgres:5432/wealist_user_db?sslmode=disable"
           livenessProbe:
             httpGet:
-              path: /api/health
+              path: /health/live
               port: 8081
             initialDelaySeconds: 30
             periodSeconds: 10
           readinessProbe:
             httpGet:
-              path: /api/ready
+              path: /health/ready
               port: 8081
             initialDelaySeconds: 5
             periodSeconds: 5
