--- a/helm/charts/board-service/values.yaml
+++ b/helm/charts/board-service/values.yaml
@@ -42,33 +42,19 @@ service:
   annotations: {}
 
 # -----------------------------------------------------------------------------
-# Application Configuration
+# Application Configuration (Service-Specific Only)
 # -----------------------------------------------------------------------------
+# Note: Common config (ENV, LOG_LEVEL, DB_HOST, DB_PORT, REDIS_HOST, REDIS_PORT,
+# S3_*, AUTH_SERVICE_URL, USER_SERVICE_URL, etc.) comes from
+# helm/environments/*.yaml via shared.config section.
+# Only service-specific values should be defined here.
 config:
+  # Server (service-specific port)
   PORT: "8000"
   SERVER_PORT: "8000"
-  ENV: "production"
-  LOG_LEVEL: "info"
 
-  # Database configuration
-  DB_HOST: "postgres"
-  DB_PORT: "5432"
+  # Database (service-specific database name)
   DB_NAME: "wealist_board_service_db"
-  DB_SSL_MODE: "require"
-
-  # Redis configuration
-  REDIS_HOST: "redis"
-  REDIS_PORT: "6379"
-
-  # S3 configuration
-  S3_ENDPOINT: "http://minio:9000"
-  S3_PUBLIC_ENDPOINT: "https://wealist.co.kr/minio"
-  S3_BUCKET: "wealist-files"
-  S3_REGION: "ap-northeast-2"
-
-  # Service URLs
-  AUTH_SERVICE_URL: "http://auth-service:8080"
-  USER_SERVICE_URL: "http://user-service:8081"
 
 # -----------------------------------------------------------------------------
 # External Secrets
