noti, stoarage, video 전부 공통 health check 방식으로 통일 (관리가 편함)

--- a/helm/charts/storage-service/values.yaml
+++ b/helm/charts/storage-service/values.yaml
@@ -61,17 +61,16 @@ externalSecrets:
 # -----------------------------------------------------------------------------
 # Health Check Configuration
 # -----------------------------------------------------------------------------
-# Note: storage-service only exposes /health (no separate /ready endpoint)
 healthCheck:
   liveness:
-    path: /health
+    path: /health/live
     initialDelaySeconds: 30
     periodSeconds: 10
     timeoutSeconds: 5
     successThreshold: 1
     failureThreshold: 3
   readiness:
-    path: /health
+    path: /health/ready
     initialDelaySeconds: 20
     periodSeconds: 5
     timeoutSeconds: 3
