--- a/helm/charts/video-service/values.yaml
+++ b/helm/charts/video-service/values.yaml
@@ -61,17 +61,16 @@ externalSecrets:
 # -----------------------------------------------------------------------------
 # Health Check Configuration
 # -----------------------------------------------------------------------------
-# Note: video-service exposes /health and /ready (not /health/live, /health/ready)
 healthCheck:
   liveness:
-    path: /health
+    path: /health/live
     initialDelaySeconds: 30
     periodSeconds: 10
     timeoutSeconds: 5
     successThreshold: 1
     failureThreshold: 3
   readiness:
-    path: /ready
+    path: /health/ready
     initialDelaySeconds: 20
     periodSeconds: 5
     timeoutSeconds: 3
