--- a/services/board-service/docker/Dockerfile
+++ b/services/board-service/docker/Dockerfile
@@ -5,29 +5,35 @@ FROM golang:1.24-bookworm AS builder
 # Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends git ca-certificates tzdata && rm -rf /var/lib/apt/lists/*
 
-# Set working directory
-WORKDIR /app
+# Set working directory to project root
+WORKDIR /workspace
 
-# Copy go mod files first (for layer caching)
-COPY go.mod go.sum ./
+# Copy shared package first
+COPY packages/wealist-advanced-go-pkg/ ./packages/wealist-advanced-go-pkg/
 
-# Download dependencies with cache mount
+# Copy service files
+WORKDIR /workspace/services/board-service
+
+# Copy source code first (needed for go mod tidy to work)
+COPY services/board-service/ ./
+
+# Add replace directive for local package
+RUN echo 'replace github.com/OrangesCloud/wealist-advanced-go-pkg => ../../packages/wealist-advanced-go-pkg' >> go.mod
+
+# Tidy and download dependencies with cache mount (use GOWORK=off to ignore go.work)
 RUN --mount=type=cache,target=/go/pkg/mod \
-    go mod download
+    GOWORK=off go mod tidy && \
+    GOWORK=off go mod download
 
-# Copy source code
-COPY . .
-
-# Build with cache mount (dramatically speeds up incremental builds)
+# Build with cache mount (use GOWORK=off)
 RUN --mount=type=cache,target=/go/pkg/mod \
     --mount=type=cache,target=/root/.cache/go-build \
-    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -ldflags="-w -s" -o board-api ./cmd/api
+    CGO_ENABLED=0 GOOS=linux GOARCH=amd64 GOWORK=off go build -ldflags="-w -s" -o board-api ./cmd/api
 
 # Runtime stage
 FROM alpine:latest
 
 # Install runtime dependencies
-# 런타임은 계속 가벼운 Alpine을 사용할 수 있습니다.
 RUN apk --no-cache add ca-certificates tzdata wget
 
 # Create non-root user
@@ -38,11 +44,10 @@ RUN addgroup -g 1000 appuser && \
 WORKDIR /home/appuser
 
 # Copy binary from builder
-COPY --from=builder --chown=appuser:appuser /app/board-api .
+COPY --from=builder --chown=appuser:appuser /workspace/services/board-service/board-api .
 
-# Copy configuration files
-COPY --from=builder --chown=appuser:appuser /app/configs ./configs
-
+# Copy configuration files (if exists)
+COPY --from=builder --chown=appuser:appuser /workspace/services/board-service/configs ./configs
 
 # Switch to non-root user
 USER appuser
@@ -52,7 +57,7 @@ EXPOSE 8000
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8000/health || exit 1
+    CMD wget --no-verbose --tries=1 --spider http://localhost:8000/health/live || exit 1
 
 # Run the application
 CMD ["./board-api"]
