--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -20,7 +20,7 @@ name: Frontend Deploy
 on:
   push:
     branches:
-      - main
+      - dev-frontend
     paths:
       - "services/frontend/**"
   workflow_dispatch:
