--- a/services/video-service/k8s/base/configmap.yaml
+++ b/services/video-service/k8s/base/configmap.yaml
@@ -13,5 +13,5 @@ data:
   USER_SERVICE_URL: "http://user-service:8081"
   LIVEKIT_HOST: "http://livekit:7880"
   # External URL for browser WebSocket connection via ingress
-  # Override in overlay for different domains (localhost vs local.wealist.co.kr)
-  LIVEKIT_WS_URL: "ws://localhost/svc/livekit"
+  # Override in overlay for different domains
+  LIVEKIT_WS_URL: "wss://dev.wealist.co.kr/svc/livekit"
