--- a/infrastructure/base/kustomization.yaml
+++ b/infrastructure/base/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 resources:
   - postgres
   - redis
-  - coturn
+  # coturn removed - LiveKit has built-in TURN server
   - livekit
 
 labels:
