--- a/infrastructure/base/livekit/service.yaml
+++ b/infrastructure/base/livekit/service.yaml
@@ -26,7 +26,7 @@ spec:
   selector:
     app: livekit
 ---
-# NodePort service for external WebRTC access (for production, use LoadBalancer)
+# NodePort service for external WebRTC access
 apiVersion: v1
 kind: Service
 metadata:
@@ -48,13 +48,13 @@ spec:
       name: rtc-tcp
     - port: 3478
       targetPort: 3478
-      nodePort: 30488
-      protocol: TCP
-      name: turn-tcp
-    - port: 3479
-      targetPort: 3478
-      nodePort: 30489
+      nodePort: 30478
       protocol: UDP
       name: turn-udp
+    - port: 3478
+      targetPort: 3478
+      nodePort: 30479
+      protocol: TCP
+      name: turn-tcp
   selector:
     app: livekit
