--- a/docker/scripts/dev/kind-config.yaml
+++ b/docker/scripts/dev/kind-config.yaml
@@ -8,6 +8,10 @@ containerdConfigPatches:
           endpoint = ["http://kind-registry:5000"]
 nodes:
   - role: control-plane
+    extraMounts:
+      - hostPath: /etc/localtime
+        containerPath: /etc/localtime
+        readOnly: true
     kubeadmConfigPatches:
       - |
         kind: InitConfiguration
@@ -25,4 +29,12 @@ nodes:
         hostPort: 8080
         protocol: TCP
   - role: worker
+    extraMounts:
+      - hostPath: /etc/localtime
+        containerPath: /etc/localtime
+        readOnly: true
   - role: worker
+    extraMounts:
+      - hostPath: /etc/localtime
+        containerPath: /etc/localtime
+        readOnly: true
