--- a/helm/environments/secrets.example.yaml
+++ b/helm/environments/secrets.example.yaml
@@ -12,7 +12,7 @@
 # =============================================================================
 
 shared:
-  config:
+  secrets:
     # -------------------------------------------------------------------------
     # Google OAuth2 Credentials
     # -------------------------------------------------------------------------
