fix: 인프라(postgres,redis,minio)만 service_healthy 유지, 서비스간은 service_started

--- a/docker/compose/docker-compose.yml
+++ b/docker/compose/docker-compose.yml
@@ -176,7 +176,7 @@ services:
     container_name: wealist-minio-init
     depends_on:
       minio:
-        condition: service_started
+        condition: service_healthy
 
     environment:
       - MINIO_ROOT_USER=${MINIO_ROOT_USER:-minioadmin}
@@ -290,9 +290,9 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       minio:
-        condition: service_started
+        condition: service_healthy
 
     healthcheck:
       test:
@@ -373,11 +373,11 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
       minio:
-        condition: service_started
+        condition: service_healthy
       user-service:
         condition: service_started
 
@@ -439,9 +439,9 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
       user-service:
         condition: service_started
 
@@ -510,9 +510,9 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
 
     healthcheck:
       test:
@@ -585,9 +585,9 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       minio:
-        condition: service_started
+        condition: service_healthy
 
     healthcheck:
       test:
@@ -664,9 +664,9 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
       redis:
-        condition: service_started
+        condition: service_healthy
       livekit:
         condition: service_started
       user-service:
@@ -750,7 +750,7 @@ services:
 
     depends_on:
       redis:
-        condition: service_started
+        condition: service_healthy
 
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/health"]
@@ -999,7 +999,7 @@ services:
 
     depends_on:
       redis:
-        condition: service_started
+        condition: service_healthy
 
     restart: unless-stopped
 
@@ -1026,7 +1026,7 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
 
     restart: unless-stopped
 
@@ -1066,7 +1066,7 @@ services:
 
     depends_on:
       postgres:
-        condition: service_started
+        condition: service_healthy
 
     healthcheck:
       test:
