fix: chat-service, noti-service에 DB_AUTO_MIGRATE=true 추가
board-service와 동일한 문제로 chat-service, noti-service도
테이블이 생성되지 않아 500 에러 발생.
DB_AUTO_MIGRATE=true 환경변수 추가하여 자동 마이그레이션 활성화.

--- a/docker/compose/docker-compose.yml
+++ b/docker/compose/docker-compose.yml
@@ -406,6 +406,7 @@ services:
       - PORT=8001
       - SERVER_BASE_PATH=/api/chats
       - LOG_LEVEL=debug
+      - DB_AUTO_MIGRATE=true
       - DATABASE_URL=postgresql://${CHAT_DB_USER}:${CHAT_DB_PASSWORD}@postgres:5432/${CHAT_DB_NAME}?sslmode=disable
       - REDIS_HOST=redis
       - REDIS_PORT=6379
@@ -470,6 +471,7 @@ services:
       - ENV=dev
       - PORT=8002
       - LOG_LEVEL=debug
+      - DB_AUTO_MIGRATE=true
 
       # Database Configuration
       - DATABASE_URL=postgresql://${NOTI_DB_USER}:${NOTI_DB_PASSWORD}@postgres:5432/${NOTI_DB_NAME}?sslmode=disable
