--- a/.github/workflows/frontend-develop-deploy.yaml
+++ b/.github/workflows/frontend-develop-deploy.yaml
@@ -20,7 +20,7 @@ name: Frontend Deploy
 on:
   push:
     branches:
-      - forked/develop
+      - dev/frontend
     paths:
       - "services/frontend/**"
   workflow_dispatch:
