feat: 모니터링 스택 설정 추가 (Prometheus, Grafana, Loki, Promtail)
Docker Compose 환경:
- Promtail 설정을 zap 로거 JSON 형식에 맞게 수정
  - timestamp, message, level, request_id 등 zap 필드 파싱
- Grafana 대시보드 JSON 파싱 쿼리 수정 (msg → message)

Kubernetes (Kind) 환경:
- wealist-monitoring Helm 차트 신규 생성
  - Prometheus: 메트릭 수집 및 K8s 서비스 디스커버리
  - Loki: 로그 집계
  - Promtail: DaemonSet 기반 로그 수집
  - Grafana: 시각화 대시보드 (NodePort 30001)
- values-develop-registry-local.yaml 추가
- helm/environments/local-kind.yaml, dev.yaml에 모니터링 설정 추가

--- a/docker/monitoring/promtail/promtail-config.yml
+++ b/docker/monitoring/promtail/promtail-config.yml
@@ -43,27 +43,37 @@ scrape_configs:
         target_label: 'container_id'
 
     pipeline_stages:
-      # JSON 로그 파싱 (Go 서비스들은 JSON 로그 출력)
+      # JSON 로그 파싱 (Go 서비스들은 zap JSON 로그 출력)
+      # zap 로거 필드: timestamp, level, message, caller, stacktrace, request_id 등
       - json:
           expressions:
             level: level
-            msg: msg
-            time: time
+            message: message
+            timestamp: timestamp
             error: error
             caller: caller
+            request_id: request_id
+            service: service
+            method: method
+            path: path
+            status: status
+            duration: duration
 
       # 로그 레벨 라벨 추가
       - labels:
           level:
+          service:
 
-      # 타임스탬프 파싱
+      # 타임스탬프 파싱 (zap ISO8601 형식)
       - timestamp:
-          source: time
-          format: RFC3339Nano
+          source: timestamp
+          format: "2006-01-02T15:04:05.000Z0700"
           fallback_formats:
+            - RFC3339Nano
             - RFC3339
             - "2006-01-02T15:04:05.999999999Z07:00"
+            - "2006-01-02T15:04:05Z07:00"
 
       # 출력 포맷 설정
       - output:
-          source: msg
+          source: message
