--- a/helm/environments/local-kind.yaml
+++ b/helm/environments/local-kind.yaml
@@ -98,3 +98,46 @@ ingress:
   hosts:
     - host: localhost
   tls: []
+
+# -----------------------------------------------------------------------------
+# Monitoring Stack
+# -----------------------------------------------------------------------------
+# wealist-monitoring 차트 배포 시 사용할 설정
+monitoring:
+  enabled: true
+  prometheus:
+    enabled: true
+    service:
+      type: ClusterIP
+      port: 9090
+    persistence:
+      enabled: true
+      storageClass: "standard"
+      size: 5Gi
+    resources:
+      requests:
+        memory: "128Mi"
+        cpu: "50m"
+      limits:
+        memory: "256Mi"
+        cpu: "200m"
+  loki:
+    enabled: true
+    service:
+      type: ClusterIP
+      port: 3100
+    persistence:
+      enabled: true
+      storageClass: "standard"
+      size: 5Gi
+  promtail:
+    enabled: true
+  grafana:
+    enabled: true
+    service:
+      type: NodePort
+      port: 3000
+      nodePort: 30001
+    admin:
+      user: admin
+      password: admin
