--- a/helm/charts/wealist-monitoring/templates/grafana/configmap-dashboards.yaml
+++ b/helm/charts/wealist-monitoring/templates/grafana/configmap-dashboards.yaml
@@ -49,7 +49,7 @@ data:
           "gridPos": {"h": 8, "w": 12, "x": 0, "y": 4},
           "id": 2,
           "options": {"legend": {"calcs": [], "displayMode": "list", "placement": "bottom", "showLegend": true}, "tooltip": {"mode": "single", "sort": "none"}},
-          "targets": [{"expr": "sum(rate(http_requests_total[5m])) by (job)", "legendFormat": "{{ `{{job}}` }}", "refId": "A"}],
+          "targets": [{"expr": "sum(rate({__name__=~\".+_http_requests_total\"}[5m])) by (job)", "legendFormat": "{{ `{{job}}` }}", "refId": "A"}],
           "title": "Request Rate (per second)",
           "type": "timeseries"
         },
@@ -67,7 +67,7 @@ data:
           "gridPos": {"h": 8, "w": 12, "x": 12, "y": 4},
           "id": 3,
           "options": {"legend": {"calcs": [], "displayMode": "list", "placement": "bottom", "showLegend": true}, "tooltip": {"mode": "single", "sort": "none"}},
-          "targets": [{"expr": "histogram_quantile(0.95, sum(rate(http_request_duration_seconds_bucket[5m])) by (le, job))", "legendFormat": "{{ `{{job}}` }} p95", "refId": "A"}],
+          "targets": [{"expr": "histogram_quantile(0.95, sum(rate({__name__=~\".+_http_request_duration_seconds_bucket\"}[5m])) by (le, job))", "legendFormat": "{{ `{{job}}` }} p95", "refId": "A"}],
           "title": "Response Time (p95)",
           "type": "timeseries"
         },
